hphp/test/zend/good/ext/standard/tests/strings/fprintf_variation_009.php.skipif
<?php
$data_file = dirname(__FILE__) . '/fprintf_variation_009.phpt.txt';
if (!($fp = fopen($data_file, 'w'))) {
  die('skip File fprintf_variation_009.phpt.txt could not be created');
}
?>