hphp/test/zend/bad/ext/pdo_mysql/tests/pdo_mysql_stmt_blobfromsteam.php.skipif
<?php
require_once(dirname(__FILE__) . DIRECTORY_SEPARATOR . 'skipif.inc');
require_once(dirname(__FILE__) . DIRECTORY_SEPARATOR . 'mysql_pdo_test.inc');
MySQLPDOTest::skip();

$tmp = MySQLPDOTest::getTempDir();
if (!$tmp)
	die("skip Can't create temporary file");

$file = $tmp . DIRECTORY_SEPARATOR . 'pdoblob.tst';
$fp = fopen($file, 'w');
if (!$fp)
	die("skip Can't create temporary file");

if (4 != fwrite($fp, 'test')) {
	die("skip Can't create temporary file");
}
fclose($fp);
clearstatcache();

if (!file_exists($file))
	die("skip Can't create temporary file");

unlink($file);
?>